--- a/LITE/Podfile
+++ b/LITE/Podfile
@@ -4,6 +4,8 @@ target 'LITE' do
   # Comment the next line if you don't want to use dynamic frameworks
   use_frameworks!
 
+  pod 'RMStore'
+
 end
 post_install do |installer|
     installer.pods_project.targets.each do |target|
